--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,13 @@ stages:
 
 job 1:
   stage: install_dependences
-  script: npm install
+  before_script: npm install --global yarn
+  script: yarn
 
 job 2:
   stage: test
-  script: CI=true npm test
+  script: CI=true yarn test
 
 job 3:
   stage: build
-  script: npm run build
+  script: yarn build
