--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,18 @@
 image: node:10.15-alpine
 
+stages:
+  - test
+  - build
+  - deploy
+
 job:
+  stage: test
   before_script:
     - "npm install"
-  script:
-    - "CI=true npm run test"
-  after_script:
-    - "npm run build"
+  script: "CI=true npm run test"
+  # after_script:
+  #   - "npm run build"
+
+job 2: 
+  stage: build
+  script: "docker build -t my-react-app ."
